Last tweak to meet API specification
